Initial multiple email server implemintation